# vix-extension

./: .gitignore  README.md
backend/: Dockerfile  app.py  config.py  docker-compose.yml  environment.yml  fly.toml  pyproject.toml  requirements.txt
backend/app/api/accessibility/: accessibility.py
backend/app/api/analysis/: schemas.py
backend/app/core/: config.py
backend/app/infrastructure/: openai_client.py  storage_service.py
backend/src/application/services/: prompt_service.py
backend/src/domain/models/: prompt.py
backend/src/infrastructure/repositories/: openai_repository.py
backend/src/interfaces/rest/: controllers.py
backend_claude/: main.py  pyproject.toml
backend_claude/src/api/: dependecies.py
backend_claude/src/api/v1/: schemas.py
backend_claude/src/api/v1/routes/: __init__.py  accessibility.py
backend_claude/src/application/services/: accessibility_service.py
backend_claude/src/domain/cme/: models.py  services.py
backend_claude/src/domain/cpm/: models.py  services.py
backend_claude/src/domain/mie/: services.py
backend_claude/src/domain/vli/: models.py  services.py
backend_claude/src/infrastructure/adapters/: __init__.py  axe_accessibility_analyzer.py  openai_cme.py  openai_conversation.py  openai_vision.py
backend_claude/src/infrastructure/ai/: prompt_manager.py
backend_manus/: .env  pyproject.toml
backend_manus/app/: main.py
backend_manus/app/adapters/: __init__.py  cache_adapter.py  ia_adapter.py  ports.py  storage_adapter.py
backend_manus/app/api/: __init__.py
backend_manus/app/api/api_v1/: __init__.py  api.py  schemas.py
backend_manus/app/api/api_v1/endpoints/accessibility/: accessibility.py
backend_manus/app/api/api_v1/endpoints/conversation/: conversation.py
backend_manus/app/api/api_v1/endpoints/tasks/: tasks.py
backend_manus/app/core/: __init__.py
backend_manus/app/core/config/: settings.py
backend_manus/app/core/logger/: logger.py
backend_manus/app/core/security/: __init__.py  security.py
backend_manus/app/domain/: __init__.py  accessibility_rules.py  conversation_intents.py  task_management.py
backend_manus/app/schemas/: accessibility.py  conversation.py  tasks.py
backend_manus/app/services/: __init__.py  accessibility.py  conversation.py  task.py
backend_openAI/: .env  pyproject.toml  test.txtawslocal
extension-v2/: package.json
frontend/: .gitignore  (+8 more)
(+140 files in other folders)
