[project]
name = "vix-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "matheuscarvalho87",email = "matheus-carvalho87@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
